--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,8 @@
 title: Safari Njema
+author: Polisocial logo
 email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  This project has received funding from the European Union’s Seventh Framework Programme for research, technological development and demonstration under grant agreement n° 288964
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
