--- a/_config.yml
+++ b/_config.yml
@@ -8,6 +8,8 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
 github_username:  jekyll
 markdown: kramdown
+kramdown:
+  parse_block_html: true
 
 collections:
   questions:
