--- a/_data/datasets.yml
+++ b/_data/datasets.yml
@@ -1,1 +1,19 @@
-- data: 
+- name: Health facilities
+  link: https://www.mozgis.gov.mz/portal/home/item.html?id=24b14545ee6d4e758066e509f546ab1d
+  description: Data are provided by the official GIS portal of the Mozambican Ministry of Transport.
+- name: High Resolution Settlement Layer (HRSL)
+  link: https://google.com
+  description: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+    tempor incididunt
+- name: OSM Road Network
+  link: https://www.openstreetmap.org
+  description: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+    tempor incididunt
+- name: Financial services (POS, ATM, Banks, Money exchange)
+  link: https://www.mozgis.gov.mz/portal/home/item.html?id=93c32bb32cad4e9b84b0123695cdc376
+  description: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+    tempor incididunt
+- name: Education system
+  link: https://www.google.com/maps/
+- name: Google Earth Imagery
+  link: https://www.google.it/intl/it/earth/index.html
