--- a/_data/people.yml
+++ b/_data/people.yml
@@ -22,3 +22,5 @@
   role: Joint PhD Candidate
 - contact: Andrea Benedetti
   department: Department of Design
+- contact: Francesco Fagiani
+  department: Department of Architecture and Urban Studies
