--- a/_data/datasets.yml
+++ b/_data/datasets.yml
@@ -1,19 +1,41 @@
 - name: Health facilities
   link: https://www.mozgis.gov.mz/portal/home/item.html?id=24b14545ee6d4e758066e509f546ab1d
   description: Data are provided by the official GIS portal of the Mozambican Ministry of Transport.
+  used:
+    - title: Accessibility, equity and social exclusion
+      link: /accessibility/
 - name: High Resolution Settlement Layer (HRSL)
   link: https://google.com
-  description: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-    tempor incididunt
+  description: Identify buildings distribution at a resolution of 1 arc-second (approximately 30 meters). This data is crucial for Maputo, where the distribution of the population has a very low detail.
+  used:
+    - title: Accessibility, equity and social exclusion
+      link: /accessibility/
+    - title: 'Organizing a Map-athon: first-hand experience of the transportation system
+      in Maputo'
+      link: /mapathon/
 - name: OSM Road Network
   link: https://www.openstreetmap.org
-  description: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-    tempor incididunt
+  used:
+    - title: Accessibility, equity and social exclusion
+      link: /accessibility/
+    - title: 'Organizing a Map-athon: first-hand experience of the transportation system
+      in Maputo'
+      link: /mapathon/
 - name: Financial services (POS, ATM, Banks, Money exchange)
   link: https://www.mozgis.gov.mz/portal/home/item.html?id=93c32bb32cad4e9b84b0123695cdc376
-  description: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-    tempor incididunt
+  used:
+    - title: Accessibility, equity and social exclusion
+      link: /accessibility/
 - name: Education system
   link: https://www.google.com/maps/
+  used:
+    - title: Accessibility, equity and social exclusion
+      link: /accessibility/
 - name: Google Earth Imagery
   link: https://www.google.it/intl/it/earth/index.html
+  used:
+    - title: Accessibility, equity and social exclusion
+      link: /accessibility/
+    - title: 'Organizing a Map-athon: first-hand experience of the transportation system
+      in Maputo'
+      link: /mapathon/
