--- a/_data/people.yml
+++ b/_data/people.yml
@@ -24,3 +24,5 @@
   department: Department of Design
 - contact: Francesco Fagiani
   department: Department of Architecture and Urban Studies
+- contact: Andrea Mascaretti
+  department: Department of Mathematics
