--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 ---
-title: Safari Njema
+title: Safari
 timezone: UTC
 collections:
   posts:
@@ -23,13 +23,10 @@ defaults:
     path: ''
   values:
     layout: intro
-email: your-email@example.com
 description: POLISOCIAL è il programma di impegno e responsabilità sociale presso
   il Politecnico di Milano. www.polisocial.polimi.it
 baseurl: "/safari-njema"
 url: https://densitydesign.github.io
-twitter_username: jekyllrb
-github_username: jekyll
 markdown: kramdown
 kramdown:
   parse_block_html: true
