--- a/_config.yml
+++ b/_config.yml
@@ -1,21 +1,16 @@
 ---
 title: Safari
 timezone: UTC
+
 collections:
-  posts:
-    title: Posts
-    output: true
   questions:
-    title: Questions
     output: true
     permalink: "/:title"
-  uploads:
-    title: Uploads
-    output: true
+
 defaults:
 - scope:
     path: ''
-    type: posts
+    type: questions
   values:
     layout: post
     is_question: true
@@ -23,6 +18,7 @@ defaults:
     path: ''
   values:
     layout: intro
+
 description: POLISOCIAL è il programma di impegno e responsabilità sociale presso
   il Politecnico di Milano. www.polisocial.polimi.it
 baseurl: "/safari-njema"
