--- a/_data/datasets.yml
+++ b/_data/datasets.yml
@@ -39,3 +39,14 @@
     - title: 'Organizing a Map-athon: first-hand experience of the transportation system
       in Maputo'
       link: /mapathon/
+- name: Performance Measurement System for Formal Mobility and Paratransit in Sub-Saharan Africa
+  link: "../assets/images/question05/appendix-1.pdf"
+  description: "Table 1. Literature review"
+  author: "Department of Management, Economics and Industrial Engineering"
+- name: Performance Measurement System for Formal Mobility and Paratransit in Sub-Saharan Africa
+  link: "../assets/images/question05/appendix-2.pdf"
+  description: "Table 2. Performance indicators"
+  author: "Department of Management, Economics and Industrial Engineering"
+- name: "Performance Measurement System for the Transportation Sector in Sub-Saharan Countries"
+  description: "Master thesis"
+  author: Elena Castelli
