--- a/_data/datasets.yml
+++ b/_data/datasets.yml
@@ -10,14 +10,12 @@
   link: https://www.mozgis.gov.mz/portal/home/item.html?id=24b14545ee6d4e758066e509f546ab1d
   description: Data are provided by the official GIS portal of the Mozambican Ministry of Transport.
 - name: High Resolution Settlement Layer (HRSL)
-  link: https://google.com
   description: Identify buildings distribution at a resolution of 1 arc-second (approximately 30 meters). This data is crucial for Maputo, where the distribution of the population has a very low detail.
 - name: OSM Road Network
   link: https://www.openstreetmap.org
 - name: Financial services (POS, ATM, Banks, Money exchange)
   link: https://www.mozgis.gov.mz/portal/home/item.html?id=93c32bb32cad4e9b84b0123695cdc376
 - name: Education system
-  link: https://www.google.com/maps/
 - name: Google Earth Imagery
   link: https://www.google.it/intl/it/earth/index.html
 - name: Performance Measurement System for Formal Mobility and Paratransit in Sub-Saharan Africa
@@ -31,3 +29,27 @@
 - name: "Performance Measurement System for the Transportation Sector in Sub-Saharan Countries"
   description: "Master thesis"
   author: Elena Castelli
+- name: "A data-driven approach for continuous behavior monitoring in healthcare"
+  link: https://www.politesi.polimi.it/handle/10589/169076
+  description: "Master thesis"
+  author: Alessandro Perego
+- name: "Urban mobility network-based models from global positioning system data. Geolocalized origin-destination matrices and two-mode lines networks"
+  link: https://www.politesi.polimi.it/handle/10589/151710
+  description: "Master thesis"
+  author: Celeste Principe
+- name: "Estimation and analysis of origin destination matrices from global positioning system data"
+  link: https://www.politesi.polimi.it/handle/10589/166569
+  description: "Master thesis"
+  author: Irene Azzini
+- name: "Automatic transport mode detection based on global positioning system data. Analysis of informal mobility in the city of Maputo"
+  link: https://www.politesi.polimi.it/handle/10589/153452
+  description: "Master thesis"
+  author: Artem Ugarov
+- name: "Accessibility maps from global positioning system data. Two case studies: Maputo and Milan"
+  link: https://www.politesi.polimi.it/handle/10589/166597
+  description: "Master thesis"
+  author: Elena Zazzetti
+- name: Data governance
+  link: https://www.politesi.polimi.it/handle/10589/154573
+  description: "Master thesis"
+  author: Kiarash Pooladsaz
